--- a/Studioemma_Pager/web/css/source/_module.less
+++ b/Studioemma_Pager/web/css/source/_module.less
@@ -1,8 +1,4 @@
 & when (@media-common = true) {
-    .pages .items {
-        display: none;
-    }
-
     .mobile-pager {
         &:extend(.abs-add-clearfix all);
         text-align: left;
@@ -24,18 +20,5 @@
                 margin-right: 0;
             }
         }
-    }
-}
-
-//
-//  Mobile
-//  ---------------------------------------------
-
-.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
-    .pages .items {
-        display: block;
-    }
-    .mobile-pager {
-        display: none;
     }
 }
